Added hint how to increase heapsize for maven