@@ -4,7 +4,7 @@ Einleitung
 Konventionen
 ------------
 
-Bitte notieren Sie sich zu Beginn fuer die Uebungen die Pfade zu folgenden Verzeichnissen:
+Bitte notieren Sie sich zu Beginn fuer die Übungen die Pfade zu folgenden Verzeichnissen:
  *	Netzlaufwerk auf dem die Software abgelegt ist:
  
 __________________________________ [DOWNLOAD_PATH]
@@ -20,7 +20,7 @@ __________________________________ [WORKSPACE_PATH]
 
 Vorbereitung
 ------------
-Ueberpruefen Sie, ob alle benoetigten Softwarepakete auf dem Schulungsrechner korrekt und vollstaendig im Verzeichnis [INSTALL_PATH] installiert sind.
+Überpruefen Sie, ob alle benoetigten Softwarepakete auf dem Schulungsrechner korrekt und vollstaendig im Verzeichnis [INSTALL_PATH] installiert sind.
 Sollte eine Softwarekomponente fehlen, müssen Sie diese nachinstallieren. Bevor Sie mit der Installation der Softwarepakte beginnen, prüfen Sie, ob Sie auf dem Schulungsrechner lokale Administrationsrechte haben.
 Die Installationsdateien für die einzelnen Softwarepakete finden Sie im Verzeichnis [DOWNLOAD_PATH]/Software.
 Für die Installation von Eclipse Plugins über den Eclipse Update Manager ist eine Internet-Verbindung notwendig. Prüfen Sie die Einstellungen unter den Eclipse Preferences > General > Network Connections.
@@ -35,6 +35,8 @@ Benötigte Software
   -	m2e Plugin 1.4.0
   oder 
   - SpringSource Tool Suite (Developer Edition) 3.4.0  
+  oder 
+  JetBrains IntelliJIDEA 12.x
 - Spring Framework 3.2.5.RELEASE 
 - Apache Tomcat 6.x oder 7.0.x 
 - GlassFish v4.0  (optional)
@@ -50,10 +52,10 @@ Im Unterverzeichnis
  Prüfen des Workspace:
  mvn validate
  
- Bauen der Übungsumgebung
+ Bauen der Übungsumgebung:
  mvn install
- mit den Demo-Projekten helloWorldRoo und helloWorldSpringBoot
-  mvn -PSpringRoo,SpringBoot install
+ mit den Demo-Projekten helloWorldRoo und helloWorldSpringBoot müssen die Profile aktiviert werden:
+ mvn -PSpringRoo,SpringBoot install
   
  Erstellen der Dokumentation:
  mvn site 
@@ -61,6 +63,14 @@ Im Unterverzeichnis
  
  Öffnen der Dokumentation im Web-Browser:
  file:///$USER_HOME/Sites/helloWorldSpring/index.html
+ 
+ Maven mehr Speicher zuweisen mit:
+ Windows:
+ set MAVEN_OPTS="-Xmx1g -XX:MaxPermSize=512m"
+ 
+ UNIX:
+ export MAVEN_OPTS="-Xmx1g -XX:MaxPermSize=512m"
+  
  
 Starten der HSQLDB:
  Im Unterverzeichnis lab/src/main/scripts befinden sich  Skripte für MS Windows und UNIX/Linux um die HSQLDB im Server-Modus zu starten:
